# ServerFramework

./: .cursorrules  .gitignore  Dockerfile  Goal.md  LICENSE  alembic.ini  dump.sh  pytest.ini  requirements.txt
src/: AbstractTest.py  Framework.Test.md  Framework.md  Localization.py  Server.py  app.py  conftest.py  docs.en.json  helptest.py  pyproject.toml
src/database/: AbstractDBTest.py  AbstractDBTest_old.py  AbstractDatabaseEntity.py  AbstractDatabaseEntity_test.py  Base.py  DB.Management.md  DB.Patterns.md  DB.Permissions.md  DB.Schema.md  DB.Test.md  DB_Auth.py  DB_Auth_test.py  DB_Extensions.py  DB_Extensions_test.py  DB_Providers.py  DB_Providers_test.py  Manager.py  Mixins.py  Permissions.py  Seed.py  StaticDatabaseManager.py  StaticPermissions.py  StaticPermissions_test.py  StaticSeedManager.py  StaticSeedManager_test.py  conftest.py
src/endpoints/: AbstractEPRouter.py  AbstractEPTest.py  AbstractEndpointRouter.py  AbstractEndpointRouter_test.py  EP.Abstraction.md  EP.ExampleFactory.md  EP.GQL.md  EP.Patterns.md  EP.Schema.md  EP.Test.md  EP.TestImprovements.md  EP_Auth.py  EP_Auth_test.py  EP_Extensions.py  EP_Extensions_test.py  EP_Providers.py  EP_Providers_test.py  GQL.py  SeedData_test.py  StaticExampleFactory.py  StaticExampleFactory_test.py  conftest.py
src/extensions/: AbstractEXT.py  AbstractEXTTest.py  AbstractExtension.py  AbstractExtension_test.py  AbstractPRVTest.py  AbstractProvider.py  AbstractProvider_test.py  EXT.Patterns.md  EXT.Test.md  PRV.Patterns.md  PRV.Test.md
src/lib/: Dependencies.py  Dependencies_test.py  Environment.py  Import.py  Import_test.py  Logging.py  Pydantic.py  Pydantic2FastAPI.py  Pydantic2SQLAlchemy.py  Pydantic2SQLAlchemy_test.py  Pydantic2Strawberry.py  Pydantic2Strawberry_test.py  Pydantic_test.py  Strings.py
src/sdk/: SDK.py  (+13 more)
(+55 files in other folders)
